# pure-ml-benchmarking

./: .gitignore  LICENSE  PA_Survey_v6.xlsx  README.md
Good Prompts/: README.md  example1.py
computer-vision/: README.md
natural-language-processing/: README.md
natural-language-processing/gpt-text-extractor/: pyproject.toml  survey.py
natural-language-processing/gpt-text-extractor/json/: README.md
natural-language-processing/gpt-text-extractor/src/: preprocess.py  prompter.py  survey.py
natural-language-processing/gpt-text-extractor/tools/: cost.py  extractor.py  preprocess.py  prompter.py  survey.py
paper-dataset/: README.md
