[tool.poetry]
name = "gpt-text-extractor"
version = "0.1.0"
description = ""
authors = ["emirkantul <emirkantul@gmail.com>"]
readme = "README.md"
packages = [{include = "gpt_text_extractor"}]

[tool.poetry.dependencies]
python = "^3.9"
openpyxl = "^3.1.2"
openai = "^0.27.7"
pdfplumber = "^0.9.0"
transformers = "^4.29.2"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
